src/test/oct05/mcq/Test01.java
package test.oct05.mcq;

public class Test01 {
	public static void main(String[] argv) {
		byte i = 10;
		byte j = 10;
		byte z = i * j; // error
		System.out.println(z);

	}
}

//A. Compilation Error
//B. 100
//C. Runtime Error
//D. 20
//
//Ans : A
